renamed uproject + started to polish

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -87,3 +87,9 @@ ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
 
+[/Script/LevelSequence.LevelSequenceProjectSettings]
+LevelSequence.DefaultDisplayRate=60
+
+[/Script/IOSRuntimeSettings.IOSRuntimeSettings]
+FrameRateLock=PUFRL_60
+
