bug fix & packaging

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=None
-EditorStartupMap=/Game/Levels/L_TestMap.L_TestMap
+GameDefaultMap=/Game/Levels/L_MainMenu.L_MainMenu
+EditorStartupMap=/Game/Levels/L_MainMenu.L_MainMenu
 GlobalDefaultGameMode=/Game/Blueprints/Core/GM_ParkourRace.GM_ParkourRace_C
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
